# Evochain

./: .gitignore  README.md  chain.json  docker-compose.yml
backend/ai-service/: .env.example  README.md  requirements.txt
backend/ai-service/app/core/: config.py
backend/ai-service/app/repositories/: __init__.py  platform.py
backend/ai-service/app/schemas/: platform.py
backend/ai-service/tests/: conftest.py  test_health.py  test_optimize.py  test_platform_routes.py
backend/ai-services/app/: main.py
backend/ai-services/app/core/: runtime.py
backend/ai-services/app/repositories/: platform.py
backend/ai-services/app/schemas/: optimization.py  platform.py  telemetry.py
backend/ai-services/app/services/: arima_forecaster.py  optimizer.py
docs/: architecture.md
evochain/: .gitignore  Cargo.toml  Dockerfile  README.md  cargo copy.toml
evochain/backend/ai-services/app/services/: rl_agent.py  simulation.py
evochain/evochain/src/: mempool.rs  network.rs  transaction.rs
evochain/src/: block.rs  blockchain.rs  config.rs  congestion.rs  crypto.rs  decision.rs  main.rs  mempool.rs  metrics.rs  network.rs  optimizer.rs  peers.rs  telemetry.rs
frontend/dashboard/: .env  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/dashboard/src/: App.tsx  styles.css
frontend/dashboard/src/api/: client.ts
scripts/: dev.ps1  launch-demo.ps1  run-nodes.ps1  stop-demo.ps1
shared/contracts/: optimize-request.schema.json  optimize-response.schema.json
(+24 files in other folders)
