[package]
name = "evochain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }